// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v0;

import "scalapb/scalapb.proto";

// Messages depending on both participant_transaction.proto and participant_transfer.proto.

message TypedSignedProtocolMessageContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  oneof some_signed_protocol_message {
    bytes mediator_response = 2;
    bytes transaction_result = 3;
    bytes malformed_mediator_request_result = 4;
    bytes transfer_result = 5;
    bytes acs_commitment = 6;
  }
}
